# counterpart-case-study

./: .coverage  README.md  pyproject.toml  sample_usage.py
data/default_tables/: industry_factor.csv
data/updated_tables/: industry_factor.csv  limit_retention_factor.csv
src/rater_example/: __init__.py  cli.py  main.py  rating_engine.py  rating_tables.py  table_loader.py
src/rater_example/default_tables/: base_premium.csv
src/rating_example.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
testing/: test_main.py  test_rating_engine.py  test_rating_tables.py  test_table_loader.py
